add acknowledgements in doc and README

--- a/README
+++ b/README
@@ -30,3 +30,5 @@
 
 See doc subdirectory for a rudimentary documentation.
 
+This work was funded by BMBF, grant no. 01IH15003A (project SKAMPY)
+This work was funded by KONWHIR project OMI4PAPS
