add single precision, add aa-vec-sl-soa kernel, updated doc
- Binaries have now a -dp or -sp suffix, depending on whether they have been
  compiled for double or single precision.

- New kernel for full array aa-vec-sl-soa added. Only one loop over the lattice
  used.

- Documentation has been updated, including how to build single precision
  binaries and performance graphs on various architectures.

--- a/README
+++ b/README
@@ -11,7 +11,7 @@ EXPERIMENTS.
 The benchmark suite was created by the HPC group of Erlangen Regional Computing
 Center (RRZE/HPC) [1] and the Chair for System Simulation of FAU (LSS) [2].
 
-See doc/main.rst or doc/html/main.html subdirectories for rudimentary
+See doc/main.rst or doc/main.html subdirectories for rudimentary
 documentation.
 
 
