add citation information

--- a/README
+++ b/README
@@ -24,7 +24,25 @@ LBM benchmark kernels are licensed under GPLv3.
 See licence of src/BoostJoin.h in the top of src/BoostJoin.h, which stems from
 the boost projects and is licenced under the Boost licence.
 
+CITE US
+-------
 
+If you use the benchmark kernels you can cite us:
+
+M. Wittmann, V. Haag, T. Zeiser, H. Köstler, and G. Wellein: Lattice Boltzmann
+Benchmark Kernels as a Testbed for Performance Analysis, (2018), Computer &
+Fluids, Special Issue DSFD2017. doi:10.1016/j.compfluid.2018.03.030. 
+
+Bibtex entry:
+
+@article{wittmann-2018,
+    author  = {M. Wittmann and V. Haag and T. Zeiser and H. K\"ostler and G. Wellein},
+    title   = {Lattice {B}oltzmann benchmark kernels as a testbed for performance analysis},
+    journal = {Computers \& Fluids},
+    year    = {2018},
+    issn    = {0045-7930},
+    doi     = {10.1016/j.compfluid.2018.03.030},
+}
 
 ACKNOWLEDGEMENTS
 ----------------
